--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+:root {
+  --primary-color: #F9F5E9;
+  --secondary-color: lightcoral;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: var(--primary-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  margin: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 50%;
+}
+
+.imgAreaContainer {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.imgContainer { 
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  margin: 20px 0;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  width: 100%;
+}
+
+button { 
+  margin: 2px auto;
+  max-width: 360px;
+  min-width: 200px;
+  background: transparent;
+  border: 1px solid var(--secondary-color);
+  padding: 0;
+  text-decoration: none;
+}
+
+button:hover {
+  background-color: var(--secondary-color);
+  transition-duration: 250ms;
+}
+
+button:hover a {
+  color: var(--primary-color);
+  transition-duration: 250ms; 
+}
+
+a {
+  text-decoration: none; 
+  display: block;
+  padding: 12px;
+  color: var(--secondary-color);
+}
+
+.buttonsList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 200px;
+}
+
+.footerText {
+  width: 100%;
+  bottom: 0px;
+  text-align: center;
+  margin: 40px 0 20px 0;
+  font-size: 9px;
 }
